started from zero, need to fix checkwinner function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+<!-- 	<div id="header">
+		<h1>Welcome to Tic-Tac-Toe!</h1>
+		<h2>Write your name:</h2>
+		<input id="player-name" type="text">
+		<h2>Choose your symbol:</h2>
+		<div id="symbol-list">
+			<button class="symbol">X</button>
+			<button class="symbol">O</button>
+		</div>
+	</div> -->
+	<h1>Tic-Tac-Toe</h1>
+	<h3>You will playing with the O, and the computer with the X. Good luck!</h3>
+
+	<table id="game-board">
+		<tr class="row">
+			<td class="cell" id="cell0"></td>
+			<td class="cell" id="cell1"></td>
+			<td class="cell" id="cell2"></td>
+		</tr>
+		<tr class="row">
+			<td class="cell" id="cell3"></td>
+			<td class="cell" id="cell4"></td>
+			<td class="cell" id="cell5"></td>
+		</tr>
+		<tr class="row">
+			<td class="cell" id="cell6"></td>
+			<td class="cell" id="cell7"></td>
+			<td class="cell" id="cell8"></td>
+		</tr>
+	</table>
+
+	<div id="messages"></div>
+
 	
 </body>
 </html>
