the games works just fine when is a player vs player. Still need to make the computer play by itself

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 	</table>
 
 	<div id="messages"></div>
+	<div id="message-winner"></div>
+
+	<div id="reset "><button>&#8635;</button></div>
 
 	
 </body>
